<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/serialNoText"
            android:layout_width="195dp"
            android:layout_height="42dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="195dp"
        android:layout_height="42dp"
        android:text="@string/quiz_text" />

    <Button
        android:id="@+id/questionNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_note"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="111dp" />


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:id="@+id/saAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/sa_button" />

            <Button
                android:id="@+id/reKomalAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/re_komal_button" />
            <Button
                android:id="@+id/reAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/re_button" />
            <Button
                android:id="@+id/gaKomalAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/ga_komal_button" />

        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/gaAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/ga_button" />

            <Button
                android:id="@+id/maAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/ma_button" />
            <Button
                android:id="@+id/maTivraAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/ma_tivra_button" />
            <Button
                android:id="@+id/paAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/pa_button" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/dhaKomalAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/dha_komal_button" />

            <Button
                android:id="@+id/dhaAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/dha_button" />
            <Button
                android:id="@+id/niKomalAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/ni_komal_button" />
            <Button
                android:id="@+id/niAnsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="launchPractice"
                android:text="@string/ni_button" />
        </TableRow>
        <Button
            android:id="@+id/ssAnsButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:onClick="launchPractice"
            android:text="@string/ss_button" />
        <TableRow>

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/nextQuestionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:clickable="false"/>
</LinearLayout>